[package]
name = "croupier"
version = "0.1.0"
authors = ["Aditya Uppal <nightimer.au@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '*'
array2d  = '*'
serde  = '*'
csv  = '*'
clap = "3.0.0-beta.2"
num = '*'
rand_core = '*'